--- a/app/src/main/res/layout/layout_holder_city.xml
+++ b/app/src/main/res/layout/layout_holder_city.xml
@@ -5,7 +5,13 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center" />
+
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="top" />
 </FrameLayout>
